优化了网页结构并给密码添加了md5加密

--- a/src/main/webapp/WEB-INF/views/index.html
+++ b/src/main/webapp/WEB-INF/views/index.html
@@ -5,6 +5,8 @@
     <title>主页</title>
 </head>
 <body>
-    <p>欢迎来到主页！</p>
+    <p>欢迎来到HTML主页！</p>
+    <a href="/blog/login">登录</a> &nbsp;&nbsp;
+    <a href="/blog/register">注册</a>
 </body>
 </html>
